--- a/src/landing-page/components/Header/Header.scss
+++ b/src/landing-page/components/Header/Header.scss
@@ -1,9 +1,9 @@
-header{
+.landing-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 25px 108px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     // transition: all ease-in-out 0.5s;
     // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     // box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -12,44 +12,43 @@ header{
     // &:hover{
     // }
 
-    ul{
+    ul {
         display: flex;
         gap: 64px;
 
-        li{
+        li {
             list-style-type: none;
-            a{
+            a {
                 font: normal 500 20px/27px "Montserrat";
                 color: #060606;
                 text-decoration: none;
             }
         }
-
     }
 
     div {
         display: flex;
         gap: 45px;
-        button{
+        button {
             cursor: pointer;
             font: normal 600 20px/27px "Montserrat";
             padding: 10px 30px;
-            background: #FFFFFF;
+            background: #ffffff;
             border-radius: 7px;
 
-            &:nth-child(1){
+            &:nth-child(1) {
                 border: solid 2px #315375;
                 color: #315375;
             }
 
-            &:nth-child(2){
-                border: solid 2px #F74A53;
-                background-color: #F74A53;
-                color: #F5F5F5;
+            &:nth-child(2) {
+                border: solid 2px #f74a53;
+                background-color: #f74a53;
+                color: #f5f5f5;
             }
         }
 
-        a .logo{
+        a .logo {
             width: 200px;
         }
     }
