--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -3,15 +3,19 @@ $paper: #ffffff;
 
 // primary
 $primaryLight: #e3f2fd;
+//$primaryMain: #FA6C16;
 $primaryMain: #2196f3;
 $primaryDark: #1e88e5;
+//$primaryDark: #FA6C16;
 $primary200: #90caf9;
 $primary800: #1565c0;
 
 // secondary
 $secondaryLight: #ede7f6;
+//$secondaryMain: #006E5E;
 $secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
+$secondaryDark: #006E5E;
+//$secondaryDark: #5e35b1;
 $secondary200: #b39ddb;
 $secondary800: #4527a0;
 
